--- a/src/main/resources/fxml/comparisonScreens/ComparisonResultScreen.fxml
+++ b/src/main/resources/fxml/comparisonScreens/ComparisonResultScreen.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="main-container" stylesheets="@css/Main.css, @css/SelectTablesScreen.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.luksosilva.dbcomparator.controller.comparisonScreens.ComparisonResultScreenController">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="main-container" stylesheets="@css/Main.css, @css/ComparisonResultScreen.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.luksosilva.dbcomparator.controller.comparisonScreens.ComparisonResultScreenController">
     <children>
       <HBox alignment="CENTER" layoutX="1.0" layoutY="14.0" prefHeight="40.0" prefWidth="691.0" spacing="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0">
          <children>
@@ -37,11 +37,10 @@
                   <Insets bottom="5" left="5" right="5" top="5" />
                </padding>
                <children>
-                  <HBox alignment="CENTER_LEFT" spacing="10.0">
+                  <HBox alignment="CENTER_RIGHT" spacing="10.0">
                      <children>
-                        <Pane HBox.hgrow="ALWAYS" />
-                        <ComboBox fx:id="filterTypeComboBox" prefHeight="20.0" prefWidth="144.0" />
-                        <TextField fx:id="searchTextField" prefWidth="200.0" promptText="buscar tabela..." />
+                        <ComboBox fx:id="filterTypeComboBox" prefHeight="20.0" prefWidth="144.0" styleClass="cmb-search" />
+                        <TextField fx:id="searchTextField" prefWidth="200.0" promptText="buscar tabela..." styleClass="txt-search" />
                      </children>
                   </HBox>
                </children>
