--- a/src/main/resources/fxml/comparisonScreens/SetFiltersScreen.fxml
+++ b/src/main/resources/fxml/comparisonScreens/SetFiltersScreen.fxml
@@ -39,10 +39,10 @@
                <children>
                   <HBox alignment="CENTER_LEFT" spacing="10.0">
                      <children>
-                        <Button fx:id="addFilterBtn" mnemonicParsing="false" onAction="#OnAddFilterButtonClicked" prefHeight="25.0" prefWidth="101.0" text="Adicionar Filtro" />
+                        <Button fx:id="addFilterBtn" mnemonicParsing="false" onAction="#OnAddFilterButtonClicked" prefHeight="33.0" prefWidth="134.0" styleClass="btn-menu" text="Adicionar Filtro" />
                         <Pane HBox.hgrow="ALWAYS" />
-                        <ComboBox fx:id="filterTypeComboBox" prefHeight="20.0" prefWidth="144.0" />
-                        <TextField fx:id="searchTextField" prefWidth="200.0" promptText="buscar tabela..." />
+                        <ComboBox fx:id="filterTypeComboBox" prefHeight="20.0" prefWidth="144.0" styleClass="cmb-search" />
+                        <TextField fx:id="searchTextField" prefWidth="200.0" promptText="buscar tabela..." styleClass="txt-search" />
                      </children>
                   </HBox>
                </children>
