--- a/src/main/resources/fxml/comparisonScreens/ColumnSettingsScreen.fxml
+++ b/src/main/resources/fxml/comparisonScreens/ColumnSettingsScreen.fxml
@@ -15,8 +15,10 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="main-container" stylesheets="@css/Main.css, @css/SelectTablesScreen.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.luksosilva.dbcomparator.controller.comparisonScreens.ColumnSettingsScreenController">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="main-container" stylesheets="@css/Main.css, @css/SelectTablesScreen.css, @css/ColumnSettingsScreen.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.luksosilva.dbcomparator.controller.comparisonScreens.ColumnSettingsScreenController">
     <children>
 
         <!-- Title text -->
@@ -56,7 +58,21 @@
 
                                 <TextField fx:id="searchTextField" styleClass="txt-search" prefWidth="200.0" promptText="buscar tabela..." />
 
-                                <ToggleButton fx:id="filterToggleButton" mnemonicParsing="false" onMouseClicked="#onFilterButtonClicked" prefHeight="25.0" prefWidth="25.0" />
+                                <ToggleButton fx:id="filterToggleButton"
+                                              mnemonicParsing="false"
+                                              onMouseClicked="#onFilterButtonClicked"
+                                              prefHeight="25.0"
+                                              prefWidth="25.0"
+                                              styleClass="button-icon">
+                                    <graphic>
+                                        <ImageView fitHeight="16" fitWidth="16"
+                                                   preserveRatio="true">
+                                            <image>
+                                                <Image url="@/icons/filter.png" />
+                                            </image>
+                                        </ImageView>
+                                    </graphic>
+                                </ToggleButton>
 
                             </children>
                         </HBox>
