--- a/src/main/resources/fxml/comparisonScreens/ComparisonResultScreen.fxml
+++ b/src/main/resources/fxml/comparisonScreens/ComparisonResultScreen.fxml
@@ -16,6 +16,8 @@
 
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
 <AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="main-container" stylesheets="@css/Main.css, @css/ComparisonResultScreen.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.luksosilva.dbcomparator.controller.comparisonScreens.ComparisonResultScreenController">
     <children>
       <HBox alignment="CENTER" layoutX="1.0" layoutY="14.0" prefHeight="40.0" prefWidth="691.0" spacing="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0">
@@ -43,7 +45,22 @@
                      <children>
                         <ComboBox fx:id="filterTypeComboBox" prefHeight="20.0" prefWidth="144.0" styleClass="cmb-search" />
                         <TextField fx:id="searchTextField" prefWidth="200.0" promptText="buscar tabela..." styleClass="txt-search" />
-                         <ToggleButton fx:id="filterToggleButton" mnemonicParsing="false" onMouseClicked="#onFilterButtonClicked" prefHeight="25.0" prefWidth="25.0" />
+
+                         <ToggleButton fx:id="filterToggleButton"
+                                       mnemonicParsing="false"
+                                       onMouseClicked="#onFilterButtonClicked"
+                                       prefHeight="25.0"
+                                       prefWidth="25.0"
+                                       styleClass="button-icon">
+                             <graphic>
+                                 <ImageView fitHeight="16" fitWidth="16"
+                                            preserveRatio="true">
+                                     <image>
+                                         <Image url="@/icons/filter.png" />
+                                     </image>
+                                 </ImageView>
+                             </graphic>
+                         </ToggleButton>
 
                      </children>
                   </HBox>
