--- a/src/main/resources/fxml/comparisonScreens/SetFiltersScreen.fxml
+++ b/src/main/resources/fxml/comparisonScreens/SetFiltersScreen.fxml
@@ -14,6 +14,10 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.control.ToggleButton?>
 <AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="main-container" stylesheets="@css/Main.css, @css/SelectTablesScreen.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.luksosilva.dbcomparator.controller.comparisonScreens.SetFiltersScreenController">
     <children>
       <HBox alignment="CENTER" layoutX="1.0" layoutY="14.0" prefHeight="40.0" prefWidth="691.0" spacing="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0">
@@ -43,10 +47,30 @@
                         <Pane HBox.hgrow="ALWAYS" />
                         <ComboBox fx:id="filterTypeComboBox" prefHeight="20.0" prefWidth="144.0" styleClass="cmb-search" />
                         <TextField fx:id="searchTextField" prefWidth="200.0" promptText="buscar tabela..." styleClass="txt-search" />
+                         <ToggleButton fx:id="filterToggleButton"
+                                       mnemonicParsing="false"
+                                       onMouseClicked="#onFilterButtonClicked"
+                                       prefHeight="25.0"
+                                       prefWidth="25.0"
+                                       styleClass="button-icon">
+                             <graphic>
+                                 <ImageView fitHeight="16" fitWidth="16"
+                                            preserveRatio="true">
+                                     <image>
+                                         <Image url="@/icons/filter.png" />
+                                     </image>
+                                 </ImageView>
+                             </graphic>
+                         </ToggleButton>
                      </children>
                   </HBox>
                </children>
             </VBox>
+             <HBox fx:id="filtersHBox" managed="false" spacing="10.0" visible="false">
+                 <children>
+                     <CheckBox fx:id="showOnlyWithInvalidFilter" prefHeight="19.0" text="Apenas tabelas com filtros inválidos" />
+                 </children>
+             </HBox>
             <ScrollPane fx:id="scrollPane" fitToWidth="true" prefHeight="339.0" prefWidth="916.0">
                <content>
                   <Accordion fx:id="tablesAccordion" />
@@ -57,9 +81,9 @@
       <Pane layoutX="10.0" layoutY="404.0" prefHeight="80.0" prefWidth="960.0" style="-fx-background-color: #E8EBF3;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
       <HBox alignment="CENTER_RIGHT" prefHeight="40.0" prefWidth="960.0" spacing="15.0" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
-              <Text fx:id="cancelBtn" onMouseClicked="#cancelComparison" styleClass="cancel-text" text="CANCELAR" />
-              <Button fx:id="previousStepBtn" mnemonicParsing="false" onMouseClicked="#previousStep" prefHeight="61.0" prefWidth="198.0" styleClass="btn-secondary" text="VOLTAR" />
-              <Button fx:id="nextStepBtn" mnemonicParsing="false" onMouseClicked="#nextStep" prefHeight="61.0" prefWidth="198.0" styleClass="btn-primary" text="AVANÇAR" />
+              <Text fx:id="cancelBtn" onMouseClicked="#cancelComparison" styleClass="cancel-text" text="Cancelar" />
+              <Button fx:id="previousStepBtn" mnemonicParsing="false" onMouseClicked="#previousStep" prefHeight="61.0" prefWidth="198.0" styleClass="btn-secondary" text="Voltar" />
+              <Button fx:id="nextStepBtn" mnemonicParsing="false" onMouseClicked="#nextStep" prefHeight="61.0" prefWidth="198.0" styleClass="btn-primary" text="Comparar" />
          </children>
          <padding>
             <Insets right="25.0" />
