--- a/src/main/resources/fxml/comparisonScreens/TableComparisonResultScreen.fxml
+++ b/src/main/resources/fxml/comparisonScreens/TableComparisonResultScreen.fxml
@@ -20,19 +20,17 @@
         <HBox alignment="CENTER_LEFT" AnchorPane.leftAnchor="20" AnchorPane.topAnchor="20">
             <Label fx:id="titleLabel" styleClass="title-text" text="table_name" />
         </HBox>
-      <HBox prefHeight="100.0" prefWidth="200.0" />
-      <VBox prefHeight="200.0" prefWidth="100.0" />
 
                     <!-- Filters -->
         <!-- Filters -->
-        <HBox alignment="BOTTOM_RIGHT" spacing="10" AnchorPane.leftAnchor="20" AnchorPane.rightAnchor="20" AnchorPane.topAnchor="80">
+        <HBox spacing="10" AnchorPane.leftAnchor="20" AnchorPane.rightAnchor="20" AnchorPane.topAnchor="80">
             <VBox prefHeight="33.0" prefWidth="546.0" spacing="10">
                 <children>
-                    <HBox alignment="CENTER_LEFT" spacing="10">
+                    <HBox alignment="CENTER_LEFT" spacing="10" VBox.vgrow="ALWAYS">
                         <children>
-                            <ComboBox fx:id="columnsComboBox" promptText="Coluna" styleClass="cmb-search" />
-                            <TextField fx:id="searchTextField" promptText="Pesquisar por..." styleClass="txt-search" HBox.hgrow="ALWAYS" />
-                            <Button fx:id="applyFilterButton" onAction="#applyFilter" styleClass="btn-action" text="Pesquisar" />
+                            <ComboBox fx:id="columnsComboBox" minWidth="200.0" promptText="Coluna" styleClass="cmb-search" HBox.hgrow="ALWAYS" />
+                            <ComboBox fx:id="sourcesComboBox" managed="false" promptText="Todas" styleClass="cmb-search" visible="false" HBox.hgrow="ALWAYS" />
+                            <TextField fx:id="searchTextField" onKeyPressed="#onSearchKeyPressed" promptText="Pesquisar por..." styleClass="txt-search" HBox.hgrow="ALWAYS" />
                         </children>
                     </HBox>
                <HBox alignment="CENTER_LEFT" spacing="10">
@@ -43,13 +41,22 @@
                </HBox>
                 </children>
             </VBox>
-
-                        <Region HBox.hgrow="ALWAYS" />
-
-                        <MenuButton fx:id="visibleColumnsMenuButton" styleClass="cmb-search" text="Colunas Visíveis">
-            <HBox.margin>
-               <Insets />
-            </HBox.margin></MenuButton>
+         <HBox prefHeight="0.0" prefWidth="164.0" HBox.hgrow="ALWAYS">
+            <children>
+                      <Button fx:id="applyFilterButton" minWidth="77.0" onAction="#applyFilter" styleClass="btn-action" text="Pesquisar">
+                  <HBox.margin>
+                     <Insets />
+                  </HBox.margin>
+               </Button>
+               <Region minWidth="10.0" HBox.hgrow="ALWAYS" />
+               <VBox alignment="BOTTOM_RIGHT" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
+                  <children>
+            
+                                    <MenuButton fx:id="visibleColumnsMenuButton" minWidth="193.0" styleClass="cmb-search" text="Colunas Visíveis" />
+                  </children>
+               </VBox>
+            </children>
+         </HBox>
         </HBox>
 
                        <!-- Table -->
