--- a/src/main/resources/fxml/comparisonScreens/AttachSourcesScreen.fxml
+++ b/src/main/resources/fxml/comparisonScreens/AttachSourcesScreen.fxml
@@ -19,7 +19,7 @@
         <HBox alignment="CENTER" spacing="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0">
             <children>
                 <Region HBox.hgrow="ALWAYS" />
-                <Text styleClass="title-text" text="selecione os bancos para comparação">
+                <Text fx:id="titleLabel" styleClass="title-text" text="selecione os bancos para comparação">
                     <font>
                         <Font size="30.0" />
                     </font>
