--- a/src/main/resources/fxml/comparisonScreens/SelectTablesScreen.fxml
+++ b/src/main/resources/fxml/comparisonScreens/SelectTablesScreen.fxml
@@ -18,6 +18,7 @@
 
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
+<?import javafx.scene.control.Pagination?>
 <AnchorPane prefHeight="680.0" prefWidth="1000.0" styleClass="main-container" stylesheets="@css/Main.css, @css/SelectTablesScreen.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.luksosilva.dbcomparator.controller.comparisonScreens.SelectTablesScreenController">
     <children>
 
@@ -25,7 +26,7 @@
         <HBox alignment="CENTER" spacing="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0">
             <children>
                 <Region HBox.hgrow="ALWAYS" />
-                <Text styleClass="title-text" text="selecione as tabelas a serem comparadas">
+                <Text fx:id="titleLabel" styleClass="title-text" text="selecione as tabelas a serem comparadas">
                     <font>
                         <Font size="30.0" />
                     </font>
@@ -88,7 +89,7 @@
                 <!-- ScrollPane with Accordion -->
                 <ScrollPane fx:id="scrollPane" fitToWidth="true" prefHeight="361.0" prefWidth="695.0" VBox.vgrow="ALWAYS">
                     <content>
-                        <Accordion fx:id="tablesAccordion" />
+                        <Accordion fx:id="tablesAccordion" VBox.vgrow="ALWAYS"/>
                     </content>
                 </ScrollPane>
             </children>
