--- a/src/main/resources/fxml/comparisonScreens/SelectTablesScreen.fxml
+++ b/src/main/resources/fxml/comparisonScreens/SelectTablesScreen.fxml
@@ -5,9 +5,12 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
@@ -16,9 +19,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.control.Pagination?>
 <AnchorPane prefHeight="680.0" prefWidth="1000.0" styleClass="main-container" stylesheets="@css/Main.css, @css/SelectTablesScreen.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.luksosilva.dbcomparator.controller.comparisonScreens.SelectTablesScreenController">
     <children>
 
@@ -53,19 +53,13 @@
 
                                 <Pane HBox.hgrow="ALWAYS" />
 
-                                <ComboBox fx:id="filterTypeComboBox" styleClass="cmb-search" prefHeight="20.0" prefWidth="144.0" />
+                                <ComboBox fx:id="filterTypeComboBox" prefHeight="20.0" prefWidth="144.0" styleClass="cmb-search" />
 
-                                <TextField fx:id="searchTextField" styleClass="txt-search" prefWidth="200.0" promptText="buscar tabela..." />
+                                <TextField fx:id="searchTextField" prefWidth="200.0" promptText="buscar tabela..." styleClass="txt-search" />
 
-                                <ToggleButton fx:id="filterToggleButton"
-                                              mnemonicParsing="false"
-                                              onMouseClicked="#onFilterButtonClicked"
-                                              prefHeight="25.0"
-                                              prefWidth="25.0"
-                                              styleClass="button-icon">
+                                <ToggleButton fx:id="filterToggleButton" mnemonicParsing="false" onMouseClicked="#onFilterButtonClicked" prefHeight="25.0" prefWidth="25.0" styleClass="button-icon">
                                     <graphic>
-                                        <ImageView fitHeight="16" fitWidth="16"
-                                                   preserveRatio="true">
+                                        <ImageView fitHeight="16" fitWidth="16" preserveRatio="true">
                                             <image>
                                                 <Image url="@/icons/filter.png" />
                                             </image>
@@ -89,7 +83,18 @@
                 <!-- ScrollPane with Accordion -->
                 <ScrollPane fx:id="scrollPane" fitToWidth="true" prefHeight="361.0" prefWidth="695.0" VBox.vgrow="ALWAYS">
                     <content>
-                        <Accordion fx:id="tablesAccordion" VBox.vgrow="ALWAYS"/>
+                        <VBox spacing="8.0">
+                            <children>
+                                <Accordion fx:id="tablesAccordion" VBox.vgrow="ALWAYS" />
+                                <HBox alignment="CENTER" spacing="10.0">
+                                    <children>
+                                        <Button fx:id="prevBtn" mnemonicParsing="false" styleClass="btn-action" text="Anterior"/>
+                                        <Label fx:id="pageLabel" text="Página 000 de 000"/>
+                                        <Button fx:id="nextBtn" mnemonicParsing="false" styleClass="btn-action" text="Próximo"/>
+                                    </children>
+                                </HBox>
+                            </children>
+                        </VBox>
                     </content>
                 </ScrollPane>
             </children>
