--- a/src/main/resources/fxml/comparisonScreens/SelectTablesScreen.fxml
+++ b/src/main/resources/fxml/comparisonScreens/SelectTablesScreen.fxml
@@ -85,18 +85,20 @@
                     <content>
                         <VBox spacing="8.0">
                             <children>
-                                <Accordion fx:id="tablesAccordion" VBox.vgrow="ALWAYS" />
-                                <HBox alignment="CENTER" spacing="10.0">
-                                    <children>
-                                        <Button fx:id="prevBtn" mnemonicParsing="false" styleClass="btn-action" text="Anterior"/>
-                                        <Label fx:id="pageLabel" text="Página 000 de 000"/>
-                                        <Button fx:id="nextBtn" mnemonicParsing="false" styleClass="btn-action" text="Próximo"/>
-                                    </children>
+                                <VBox>
+                                    <Accordion fx:id="tablesAccordion" VBox.vgrow="NEVER" />
+                                </VBox>
+                                <Region VBox.vgrow="ALWAYS"/>
+                                <HBox fx:id="paginationHBox" spacing="10.0" alignment="CENTER">
+                                    <Button fx:id="prevBtn" text="Anterior" styleClass="btn-action"/>
+                                    <Label fx:id="pageLabel" text="Página 000 de 000"/>
+                                    <Button fx:id="nextBtn" text="Próximo" styleClass="btn-action"/>
                                 </HBox>
                             </children>
                         </VBox>
                     </content>
                 </ScrollPane>
+
             </children>
         </VBox>
       <Pane layoutX="10.0" layoutY="404.0" prefHeight="80.0" prefWidth="960.0" style="-fx-background-color: #E8EBF3;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
