--- a/src/main/resources/fxml/comparisonScreens/ColumnSettingsScreen.fxml
+++ b/src/main/resources/fxml/comparisonScreens/ColumnSettingsScreen.fxml
@@ -8,6 +8,8 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
@@ -15,9 +17,8 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
 
+<?import javafx.scene.control.Label?>
 <AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="main-container" stylesheets="@css/Main.css, @css/SelectTablesScreen.css, @css/ColumnSettingsScreen.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.luksosilva.dbcomparator.controller.comparisonScreens.ColumnSettingsScreenController">
     <children>
 
@@ -50,23 +51,16 @@
                             <children>
                         <Button mnemonicParsing="false" onAction="#onResetSettingsToOriginalForAllTablesButtonClicked" styleClass="btn-menu" text="Padrão do sistema" />
                         <Button mnemonicParsing="false" onAction="#onResetSettingsToDefaultForAllTablesButtonClicked" styleClass="btn-menu" text="Padrão" />
-                        <Button mnemonicParsing="false" onAction="#onSaveSettingsForAllAlteredTablesButtonClicked" styleClass="btn-menu" text="Salvar Alterados" />
 
                                 <Pane HBox.hgrow="ALWAYS" />
 
-                                <ComboBox fx:id="filterTypeComboBox" styleClass="cmb-search" prefHeight="20.0" prefWidth="144.0" />
+                                <ComboBox fx:id="filterTypeComboBox" prefHeight="20.0" prefWidth="144.0" styleClass="cmb-search" />
 
-                                <TextField fx:id="searchTextField" styleClass="txt-search" prefWidth="200.0" promptText="buscar tabela..." />
+                                <TextField fx:id="searchTextField" prefWidth="200.0" promptText="buscar tabela..." styleClass="txt-search" />
 
-                                <ToggleButton fx:id="filterToggleButton"
-                                              mnemonicParsing="false"
-                                              onMouseClicked="#onFilterButtonClicked"
-                                              prefHeight="25.0"
-                                              prefWidth="25.0"
-                                              styleClass="button-icon">
+                                <ToggleButton fx:id="filterToggleButton" mnemonicParsing="false" onMouseClicked="#onFilterButtonClicked" prefHeight="25.0" prefWidth="25.0" styleClass="button-icon">
                                     <graphic>
-                                        <ImageView fitHeight="16" fitWidth="16"
-                                                   preserveRatio="true">
+                                        <ImageView fitHeight="16" fitWidth="16" preserveRatio="true">
                                             <image>
                                                 <Image url="@/icons/filter.png" />
                                             </image>
@@ -82,14 +76,25 @@
                     <children>
                         <CheckBox fx:id="showOnlySchemaDiffersCheckBox" prefHeight="19.0" text="Apenas com diferenças nos schemas" />
                         <CheckBox fx:id="showOnlyInvalidColumnSettingsCheckBox" prefHeight="19.0" text="Apenas com configurações inválidas" />
-                        <CheckBox fx:id="showOnlyAlteredCheckBox" prefHeight="19.0" text="Apenas alteradas" />
                     </children>
                 </HBox>
 
                 <!-- ScrollPane with Accordion -->
                 <ScrollPane fx:id="scrollPane" fitToWidth="true" prefHeight="361.0" prefWidth="695.0" VBox.vgrow="ALWAYS">
                     <content>
-                        <Accordion fx:id="tablesAccordion" />
+                        <VBox spacing="8.0">
+                            <children>
+                                <VBox>
+                                    <Accordion fx:id="tablesAccordion" VBox.vgrow="NEVER" />
+                                </VBox>
+                                <Region VBox.vgrow="ALWAYS"/>
+                                <HBox fx:id="paginationHBox" spacing="10.0" alignment="CENTER">
+                                    <Button fx:id="prevBtn" text="Anterior" styleClass="btn-action"/>
+                                    <Label fx:id="pageLabel" text="Página 000 de 000"/>
+                                    <Button fx:id="nextBtn" text="Próximo" styleClass="btn-action"/>
+                                </HBox>
+                            </children>
+                        </VBox>
                     </content>
                 </ScrollPane>
             </children>
